--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,5 @@
+AddHandler application/x-httpd-alt-php81___lsphp .php .php4 .phtml
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
